[gd_scene load_steps=11 format=3 uid="uid://dk8oumh7o061w"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_8g67v"]
[ext_resource type="Theme" uid="uid://cnblchsm4ed1e" path="res://ui/default_theme.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://cxp3hgchbufui" path="res://sprites/Preview2.png" id="5"]
[ext_resource type="Shader" path="res://shaders/canvas/sprite_outline.gdshader" id="6"]
[ext_resource type="Texture2D" uid="uid://b6jcs4jajnr2o" path="res://sprites/ui/pause.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cw151o7e617j0" path="res://sprites/ui/play.png" id="8"]
[ext_resource type="Texture2D" uid="uid://jmosaycs5tef" path="res://sprites/ui/play10x10.png" id="9"]

[sub_resource type="CanvasItemMaterial" id="1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kcwa8"]
shader = ExtResource("6")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="Theme" id="Theme_j363j"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_8g67v")
pause_sprite = ExtResource("7")
play_sprite = ExtResource("9")

[node name="HealthLabel" type="Label" parent="."]
texture_filter = 1
material = SubResource("1")
offset_left = 30.0
offset_top = 15.0
offset_right = 107.0
offset_bottom = 57.0
theme = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "HP: 0"

[node name="ScoreLabel" type="Label" parent="."]
texture_filter = 1
material = SubResource("1")
offset_left = 440.0
offset_top = 15.0
offset_right = 574.0
offset_bottom = 57.0
grow_horizontal = 0
theme = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="LvlLabel" type="Label" parent="."]
texture_filter = 1
material = SubResource("1")
offset_left = 30.0
offset_top = 65.0
offset_right = 88.0
offset_bottom = 107.0
theme = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "lvl: 1"

[node name="PauseButton" type="Button" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 25.0
offset_right = 25.0
offset_bottom = 75.0
theme = ExtResource("4")
icon = ExtResource("8")
expand_icon = true

[node name="GameOverScreen" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_kcwa8")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("5")

[node name="Label" type="Label" parent="GameOverScreen"]
texture_filter = 1
layout_mode = 0
offset_right = 360.0
offset_bottom = 68.0
theme = ExtResource("4")
theme_override_font_sizes/font_size = 45
text = "you are dead"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="RestartButton" type="Button" parent="GameOverScreen"]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 80.0
offset_top = 548.0
offset_right = 280.0
offset_bottom = 601.0
theme = SubResource("Theme_j363j")
theme_override_font_sizes/font_size = 32
text = "try again"

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="GameOverScreen/RestartButton" to="." method="_on_RestartButton_pressed"]
